<resources>
    <string name="app_name">Court Counter</string>
    <string name="time">Time:</string>
    <string name="Team_A">Team A</string>
    <string name="Team_B">Team B</string>
    <string name="team_score">0</string>
    <string name="points_3">+3 Points</string>
    <string name="points_2">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="start_bn">Start</string> />
    <string name="reset_bn">Reset</string> />
    <string name="pause_bn">Pause</string> />
</resources>
